--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/perfumewebstore
+spring.datasource.username=postgres
+spring.datasource.password=2705
 
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=false
+#spring.jpa.hibernate.ddl-auto=validate
+
+
+logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.root=info
+#logging.level.org.springframework.data=trace
+logging.level.com.example=info
+logging.level.org.springframework.security=trace
+logging.level.javax.email=trace
+
+#recaptcha.secret=6Lc5cLkZAAAAANUjd4--Jx6PioSC_N-9MFKT3PsA
+#recaptcha.url=https://www.google.com/recaptcha/api/siteverify?secret=%s&response=%s
