--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.modelmapper:modelmapper:2.3.8'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
