--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ logging.level.javax.email=trace
 
 #recaptcha.secret=6Lc5cLkZAAAAANUjd4--Jx6PioSC_N-9MFKT3PsA
 #recaptcha.url=https://www.google.com/recaptcha/api/siteverify?secret=%s&response=%s
+
+jwt.header=Authorization
+jwt.secret=dejavu
+jwt.expiration=604800
