--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:2.3.8'
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    implementation 'io.jsonwebtoken:jjwt:0.2'
+
 
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
